--- a/src/pages/kontakt/kontakt.html
+++ b/src/pages/kontakt/kontakt.html
@@ -8,6 +8,9 @@
 
   <ion-navbar>
     <ion-title>kontakt</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
   </ion-navbar>
 
 </ion-header>
