define all component buttons

--- a/src/pages/komponenten/komponenten.html
+++ b/src/pages/komponenten/komponenten.html
@@ -4,7 +4,11 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Komponenten</ion-title>
+    <ion-title>
+      <ion-icon  name="happy" color="nigger"></ion-icon>
+      Komponenten
+      <ion-icon  name="happy" color="nigger"></ion-icon>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -17,16 +21,503 @@
     <ion-row>
       <ion-col col-6>
         <button ion-button icon-left outline color="btnColor" (click)="goToActionsheet()">
-          <ion-icon name="happy" color="nigger"></ion-icon>
           Actionsheet
         </button>
       </ion-col>
       <ion-col col-6>
         <button ion-button icon-left outline color="btnColor" (click)="goToAlert()">
-          <ion-icon name="happy" color="nigger"></ion-icon>
           Alert
         </button>
       </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToApp()">
+          App
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToAvatar()">
+          Avatar
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToBadge()">
+          Badge
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToButton()">
+          Button
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToCheckbox()">
+          Checkbox
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToChip()">
+          Chip
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToCol()">
+          Col
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToConfig()">
+          Config
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToContent()">
+          Content
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToDateTime()">
+          DateTime
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToEvents()">
+          Events
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToFabButton()">
+          FabButton
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToFabContainer()">
+          FabContainer
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToFooter()">
+          Footer
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToGrid()">
+          Grid
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToHaptic()">
+          Haptic
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToHeader()">
+          Header
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToHideWhen()">
+          HideWhen
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToIcon()">
+          Icon
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToImg()">
+          Img
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToInfiniteScroll()">
+          InfiniteScroll
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToInput()">
+          Input
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToIonicErrorHandler()">
+          IonicErrorHandler
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToIonicModule()">
+          IonicModule
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToIonicPage()">
+          IonicPage
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToIonicPageModule()">
+          IonicPageModule
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToItem()">
+          Item
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToItemOptions()">
+          ItemOptions
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToItemRecorder()">
+          ItemRecorder
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToItemSliding()">
+          ItemSliding
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToKeyboard()">
+          Keyboard
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToLabel()">
+          Label
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToList()">
+          List
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToLoadingController()">
+          LoadingController
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToMenu()">
+          Menu
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToMenuClose()">
+          MenuClose
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToMenuController()">
+          MenuController
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToMenuToggle()">
+          MenuToggle
+        </button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToModalController()">
+            ModalController
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToNav()">
+            Nav
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToNavbar()">
+            Navbar
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToNavController()">
+            NavController
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToNavParams()">
+            NavParams
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToNavPop()">
+            NavPop
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToNavPush()">
+            NavPush
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToNote()">
+            Note
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToOption()">
+            Option
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToPlatform()">
+            Platform
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToPlatformConfigToken()">
+            PlatformConfigToken
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToPopoverController()">
+            PopoverController
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToRadioButton()">
+            RadioButton
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToRadioGroup()">
+            RadioGroup
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToRange()">
+            Range
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToRefresher()">
+            Refresher
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToregisterModeConfigs()">
+            registerModeConfigs
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToRow()">
+            Row
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToScroll()">
+            Scroll
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToSearchbar()">
+            Searchbar
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToSegment()">
+            Segment
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToSegmentButton()">
+            SegmentButton
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToSelect()">
+            Select
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToShowWhen()">
+            ShowWhen
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToSlide()">
+            Slide
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToSpinner()">
+            Spinner
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToSplitPane()">
+            SplitPane
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToTab()">
+            Tab
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToTabs()">
+            Tabs
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToThumbnail()">
+            Thumbnail
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToTitle()">
+            Title
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToToastController()">
+            ToastController
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToToogle()">
+            Toogle
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToToolbar()">
+            Toolbar
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToTypography()">
+            Typography
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToViewController()">
+            ViewController
+          </button>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToVirualScroll()">
+            VirtualScroll
+          </button>
+        </ion-col>
     </ion-row>
     
   </ion-grid>
