use actionsheet with randomIntBackend

--- a/src/pages/actionsheet/actionsheet.html
+++ b/src/pages/actionsheet/actionsheet.html
@@ -8,4 +8,10 @@
 
 
 <ion-content padding>  
+
+  <button ion-button color="primary" (click)="presentActionSheet()">Öffne Actionsheet</button>
+
+  <span class="row">Random Integer</span>
+  <span class="row">{{ randomInt }}</span>
+
 </ion-content>
