playing with cards

--- a/src/pages/avatar/avatar.html
+++ b/src/pages/avatar/avatar.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>avatar</ion-title>
+    <ion-title>Avatar Beispiel</ion-title>
   </ion-navbar>
 
 </ion-header>
