--- a/src/pages/button/button.html
+++ b/src/pages/button/button.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>button</ion-title>
+    <ion-title>Button Beispiel</ion-title>
   </ion-navbar>
 
 </ion-header>
