--- a/src/pages/komponenten/komponenten.html
+++ b/src/pages/komponenten/komponenten.html
@@ -58,6 +58,19 @@
     </ion-row>
 
     <ion-row>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToCard()">
+            Card
+          </button>
+        </ion-col>
+        <ion-col col-6>
+          <button ion-button icon-left outline color="btnColor" (click)="goToCard()">
+            Card 2
+          </button>
+        </ion-col>
+      </ion-row>
+
+    <ion-row>
       <ion-col col-6>
         <button ion-button icon-left outline color="btnColor" (click)="goToCheckbox()">
           Checkbox
