--- a/src/pages/komponenten/komponenten.html
+++ b/src/pages/komponenten/komponenten.html
@@ -64,34 +64,21 @@
           </button>
         </ion-col>
         <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToCard()">
-            Card 2
+          <button ion-button icon-left outline color="btnColor" (click)="goToCheckbox()">
+            Checkbox
           </button>
         </ion-col>
       </ion-row>
 
     <ion-row>
       <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToCheckbox()">
-          Checkbox
-        </button>
-      </ion-col>
-      <ion-col col-6>
         <button ion-button icon-left outline color="btnColor" (click)="goToChip()">
           Chip
         </button>
       </ion-col>
-    </ion-row>
-
-    <ion-row>
       <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToCol()">
-          Col
-        </button>
-      </ion-col>
-      <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToConfig()">
-          Config
+        <button ion-button icon-left outline color="btnColor" (click)="goToColAndConfig()">
+          Col and Config
         </button>
       </ion-col>
     </ion-row>
