events + fabs + footer

--- a/src/pages/datetime/datetime.html
+++ b/src/pages/datetime/datetime.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>datetime</ion-title>
+    <ion-title>Datetime Beispiel</ion-title>
   </ion-navbar>
 
 </ion-header>
