--- a/src/pages/events-sub/events-sub.html
+++ b/src/pages/events-sub/events-sub.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>eventsSub</ion-title>
+    <ion-title>Ebents Sub Beispiel</ion-title>
   </ion-navbar>
 
 </ion-header>
