--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>events</ion-title>
+    <ion-title>Events Beispiel</ion-title>
   </ion-navbar>
 
 </ion-header>
