--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,4 +15,10 @@
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
+
+  <ion-footer>
+    <ion-toolbar color="primary">
+      <ion-title (click)="goToKomponenten()">Zu den Komponenten</ion-title>
+    </ion-toolbar>
+  </ion-footer>
 </ion-content>
