--- a/src/pages/komponenten/komponenten.html
+++ b/src/pages/komponenten/komponenten.html
@@ -111,21 +111,21 @@
 
     <ion-row>
       <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToGrid()">
-          Grid
+        <button ion-button icon-left outline color="btnColor" (click)="goToGestures()">
+          Gestures
         </button>
       </ion-col>
       <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToHaptic()">
-          Haptic
+        <button ion-button icon-left outline color="btnColor" (click)="goToGrid()">
+          Grid
         </button>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToHeader()">
-          Header
+        <button ion-button icon-left outline color="btnColor" (click)="goToHaptic()">
+          Haptic
         </button>
       </ion-col>
       <ion-col col-6>
