--- a/src/pages/termin/termin.html
+++ b/src/pages/termin/termin.html
@@ -11,8 +11,10 @@
 
   <ion-list>
     <ion-item *ngFor="let termin of termine">
-      <ion-row>{{ termin.id }} </ion-row>
-      <ion-row>{{ termin.bezeichnung }} </ion-row>
+      <ion-list-header>
+        <ion-row>{{ termin.id }} </ion-row>
+        <ion-row>{{ termin.bezeichnung }} </ion-row>
+      </ion-list-header>
       <ion-row>{{ termin.beteiligtePersonen }} </ion-row>
       <ion-row>{{ termin.zeitpunt | date:'dd.MM.yyyy'}} </ion-row>
     </ion-item>
