--- a/src/pages/termin/termin.html
+++ b/src/pages/termin/termin.html
@@ -1,7 +1,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>termin</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Termine</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -19,5 +22,14 @@
       <ion-row>{{ termin.zeitpunt | date:'dd.MM.yyyy'}} </ion-row>
     </ion-item>
   </ion-list>
+
+  <ion-row *ngIf="errorMessage">
+    <ion-row>
+        <ion-label color="danger">Error:</ion-label>
+    </ion-row>
+    <ion-row>
+      <ion-label color="danger">{{ errorMessage }}</ion-label>
+    </ion-row>
+  </ion-row>
 
 </ion-content>
