--- a/src/pages/termin-erstellung/termin-erstellung.html
+++ b/src/pages/termin-erstellung/termin-erstellung.html
@@ -24,7 +24,7 @@
             <ion-input formControlName="beiteiligtePersonen" type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-datetime displayFormat="MMM DD YYYY"
+            <ion-datetime displayFormat="DD MM YYYY"
                           formControlName="zeitpunkt"
                           placeholder="Zeitpunkt auswählen"
                           min="2017"
