termin bearbeitung works + refactoring to sub

--- a/src/pages/termin/termin.html
+++ b/src/pages/termin/termin.html
@@ -41,7 +41,7 @@
       </ion-row>
       <ion-row>
         <ion-col offset-2>
-          <button ion-button icon-right color="primary">
+          <button ion-button icon-right color="primary" (click)="goToTerminBearbeitung(termin)">
             Termin bearbeiten
             <ion-icon name="create"></ion-icon>
           </button>
