termin loeschen + fancy toasts

--- a/src/pages/termin-sub/termin-sub.html
+++ b/src/pages/termin-sub/termin-sub.html
@@ -25,7 +25,7 @@
             <ion-input formControlName="beiteiligtePersonen" type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-datetime displayFormat="DD MM YYYY"
+            <ion-datetime displayFormat="DD.MM.YYYY"
                           formControlName="zeitpunkt"
                           placeholder="Zeitpunkt auswählen"
                           min="2017"
@@ -58,7 +58,7 @@
             <ion-input formControlName="beiteiligtePersonen" type="text"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-datetime displayFormat="DD MM YYYY"
+            <ion-datetime displayFormat="DD.MM.YYYY"
                           formControlName="zeitpunkt"
                           placeholder="Zeitpunkt auswählen"
                           min="2017"
