--- a/src/pages/termin/termin.html
+++ b/src/pages/termin/termin.html
@@ -47,7 +47,7 @@
           </button>
         </ion-col>
         <ion-col col-6>
-          <button ion-button icon-right color="primary" (click)="terminLoeschen(termin.id)" mini>
+          <button ion-button icon-right color="primary" (click)="showConfirmation(termin.id)" mini>
             Löschen
             <ion-icon name="trash"></ion-icon>
           </button>
