finally implemented alert + error message when backend is not available

--- a/src/pages/termin/termin.html
+++ b/src/pages/termin/termin.html
@@ -12,7 +12,7 @@
 
 <ion-content padding>
 
-  <ion-row *ngIf="!errorMessage">
+  <ion-row>
     <ion-col offset-3>
       <button ion-button icon-right color="primary" (click)="goToTerminErstellung()">
         Termin anlegen
