--- a/src/pages/alert/alert.html
+++ b/src/pages/alert/alert.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the AlertPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +8,31 @@
 
 
 <ion-content padding>
+
+  <button ion-button block primary (click)="showBasicAlert()">Basis Alert</button>
+
+  <button ion-button block primary (click)="showCheckboxAlert()">Checkbox Alert</button>
+
+  <button ion-button block primary (click)="showRadioAlert()">Radio Alert</button>
+
+  <button ion-button block primary (click)="showConfirmAlert()">Confirm Alert</button>
+  
+  <button ion-button block primary (click)="showPromptAlert()">Prompt Alert</button>
+
+  <ion-row>
+      Checkbox Ergebnisse: {{ testCheckboxResult }}
+  </ion-row>
+
+  <ion-row>
+      Radio Ergebnis: {{ testRadioResult }}
+  </ion-row>
+
+  <ion-row>
+      Confirm Ergebnis: {{ testConfirmResult }}
+  </ion-row>
+
+  <ion-row>
+      Prompt Ergebnisse: {{ titel }}
+  </ion-row>
 
 </ion-content>
