--- a/src/pages/komponenten/komponenten.html
+++ b/src/pages/komponenten/komponenten.html
@@ -203,7 +203,7 @@
     <ion-row>
       <ion-col col-6>
         <button ion-button icon-left outline color="btnColor" (click)="goToList()">
-          List
+          List und Storage
         </button>
       </ion-col>
       <ion-col col-6>
