--- a/src/pages/termin/termin.html
+++ b/src/pages/termin/termin.html
@@ -12,48 +12,39 @@
 
 <ion-content padding>
 
-  <ion-row>
-    <ion-col offset-3>
-      <button ion-button icon-right color="primary" (click)="goToTerminErstellung()">
-        Termin anlegen
-        <ion-icon name="add"></ion-icon>
-      </button>
-    </ion-col>
-  </ion-row>
+  <ion-fab top right edge>
+    <button ion-fab color="primary" mini (click)="goToTerminErstellung()">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
 
-  <ion-list>
-    <ion-item *ngFor="let termin of termine">
-      <ion-list-header>
-        <ion-row>
-          <ion-col col-1>
-            <ion-icon name="calendar"></ion-icon>
-          </ion-col>
-          <ion-col col-11>
-            {{ termin.id }} {{ termin.bezeichnung }}
-          </ion-col>
-        </ion-row>
-      </ion-list-header>
-      <ion-row>
-        <ion-item>Beteiligte: {{ termin.beteiligtePersonen }}</ion-item>
-      </ion-row>
-      <ion-row>
-        <ion-item>Zeitpunkt: {{ termin.zeitpunt | date:'dd.MM.yyyy'}}</ion-item>
-      </ion-row>
-      <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-right color="primary" (click)="goToTerminBearbeitung(termin)" mini>
-            Bearbeiten
-            <ion-icon name="create"></ion-icon>
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-right color="primary" (click)="showConfirmation(termin.id)" mini>
-            Löschen
-            <ion-icon name="trash"></ion-icon>
-          </button>
-        </ion-col>
-      </ion-row>
-    </ion-item>
-  </ion-list>
+  <ion-card *ngFor="let termin of termine" class="roundCorner" color="light">
+    <ion-card-content>
+      <ion-card-title>
+        <ion-label color="dark">
+          <ion-icon name="calendar"></ion-icon> {{ termin.id }} {{ termin.bezeichnung }}
+        </ion-label>
+      </ion-card-title>
+      <ion-label>
+        <ion-icon name="people"></ion-icon> Beteiligte: {{ termin.beteiligtePersonen }}
+        <br>
+        <ion-icon name="time"></ion-icon> Zeitpunkt: {{ termin.zeitpunt | date:'dd.MM.yyyy'}}
+      </ion-label>
+    </ion-card-content>
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-left small outline class="width roundCorner" (click)="goToTerminBearbeitung(termin.id)">
+          <ion-icon name="create"></ion-icon>
+          <div>Bearbeiten</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-left small outline class="width roundCorner" (click)="showConfirmation(termin.id)">
+          <ion-icon name="trash"></ion-icon>
+          <div>Löschen</div>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-card>
 
 </ion-content>
