termin erstellung + termin bearbeitung should work

--- a/src/pages/termin/termin.html
+++ b/src/pages/termin/termin.html
@@ -42,7 +42,7 @@
         </ion-list>
       </ion-row>
       <ion-row>
-        <ion-item>Zeitpunkt: {{ termin.zeitpunkt | date:'dd.MM.yyyy'}}</ion-item>
+        <ion-item>Zeitpunkt: {{ termin.zeitpunkt | date:'dd.MM.yyyy HH:mm'}}</ion-item>
       </ion-row>
       <ion-row>
         <ion-col col-6>
