app methoden + modal + nav link

--- a/src/pages/input/input.html
+++ b/src/pages/input/input.html
@@ -33,7 +33,7 @@
           <ion-input type="text" placeholder="Placeholder"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label stacked>Floating Label</ion-label>
+          <ion-label stacked>Stacked Label</ion-label>
           <ion-input type="text"></ion-input>
         </ion-item>
         <ion-item>
