--- a/src/pages/app/app.html
+++ b/src/pages/app/app.html
@@ -9,18 +9,23 @@
 
 <ion-content padding>
 
-  Dies ist ein Beispiel für die verschiedenen Ionic Methoden.
-  Source Code + Konsole ansehen.
+  Dies ist ein Beispiel für die verschiedenen Ionic Methoden. Source Code + Konsole ansehen.
 
   <span>Reihenfolge</span>:
 
   <ion-list>
-    <ion-item>1. ionViewDidLoad</ion-item>
-    <ion-item>2. ionViewWillEnter</ion-item>
-    <ion-item>3. ionViewDidEnter</ion-item>
-    <ion-item>4. ionViewWillLeave</ion-item>
-    <ion-item>5. ionViewDidLeave</ion-item>
-    <ion-item>6. ionViewWillUnload</ion-item>  
+    <ion-item>1. ionViewCanEnter
+      <ion-item> return true oder false</ion-item>
+    </ion-item>
+    <ion-item>2. ionViewDidLoad</ion-item>
+    <ion-item>3. ionViewWillEnter</ion-item>
+    <ion-item>4. ionViewDidEnter</ion-item>
+    <ion-item>5. ionViewWillLeave</ion-item>
+    <ion-item>6. ionViewDidLeave</ion-item>
+    <ion-item>7. ionViewWillUnload</ion-item>
+    <ion-item>8. ionViewCanLeave
+      <ion-item> return true oder false</ion-item>
+    </ion-item>
   </ion-list>
 
 </ion-content>
