--- a/src/pages/komponenten/komponenten.html
+++ b/src/pages/komponenten/komponenten.html
@@ -5,16 +5,16 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      <ion-icon  name="happy" color="nigger"></ion-icon>
+      <ion-icon name="happy" color="nigger"></ion-icon>
       Komponenten
-      <ion-icon  name="happy" color="nigger"></ion-icon>
+      <ion-icon name="happy" color="nigger"></ion-icon>
     </ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding> 
+<ion-content padding>
 
   <ion-grid>
 
@@ -58,17 +58,17 @@
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToCard()">
-            Card
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToCheckbox()">
-            Checkbox
-          </button>
-        </ion-col>
-      </ion-row>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToCard()">
+          Card
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToCheckbox()">
+          Checkbox
+        </button>
+      </ion-col>
+    </ion-row>
 
     <ion-row>
       <ion-col col-6>
@@ -168,10 +168,10 @@
         </button>
       </ion-col>
       <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToItem()">
-            Item
-          </button>
-        </ion-col>
+        <button ion-button icon-left outline color="btnColor" (click)="goToItem()">
+          Item
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
@@ -215,272 +215,207 @@
 
     <ion-row>
       <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToMenu()">
-          Menu
+        <button ion-button icon-left outline color="btnColor" (click)="goToModalController()">
+          ModalController
         </button>
       </ion-col>
       <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToMenuClose()">
-          MenuClose
+        <button ion-button icon-left outline color="btnColor" (click)="goToNav()">
+          Nav
         </button>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToMenuController()">
-          MenuController
+        <button ion-button icon-left outline color="btnColor" (click)="goToNote()">
+          Note
         </button>
       </ion-col>
       <ion-col col-6>
-        <button ion-button icon-left outline color="btnColor" (click)="goToMenuToggle()">
-          MenuToggle
+        <button ion-button icon-left outline color="btnColor" (click)="goToPlatform()">
+          Platform
         </button>
       </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToModalController()">
-            ModalController
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToNav()">
-            Nav
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToPlatformConfigToken()">
+          PlatformConfigToken
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToPopoverController()">
+          PopoverController
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToNavbar()">
-            Navbar
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToNavController()">
-            NavController
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToRadioButton()">
+          RadioButton
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToRadioGroup()">
+          RadioGroup
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToNavParams()">
-            NavParams
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToNavPop()">
-            NavPop
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToRange()">
+          Range
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToRefresher()">
+          Refresher
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToNavPush()">
-            NavPush
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToNote()">
-            Note
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToregisterModeConfigs()">
+          registerModeConfigs
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToRow()">
+          Row
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToOption()">
-            Option
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToPlatform()">
-            Platform
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToScroll()">
+          Scroll
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToSearchbar()">
+          Searchbar
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToPlatformConfigToken()">
-            PlatformConfigToken
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToPopoverController()">
-            PopoverController
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToSegment()">
+          Segment
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToSegmentButton()">
+          SegmentButton
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToRadioButton()">
-            RadioButton
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToRadioGroup()">
-            RadioGroup
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToSelect()">
+          Select / Option
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToShowWhen()">
+          ShowWhen
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToRange()">
-            Range
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToRefresher()">
-            Refresher
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToSlide()">
+          Slide
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToSpinner()">
+          Spinner
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToregisterModeConfigs()">
-            registerModeConfigs
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToRow()">
-            Row
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToSplitPane()">
+          SplitPane
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToTab()">
+          Tab
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToScroll()">
-            Scroll
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToSearchbar()">
-            Searchbar
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToTabs()">
+          Tabs
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToThumbnail()">
+          Thumbnail
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToSegment()">
-            Segment
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToSegmentButton()">
-            SegmentButton
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToTitle()">
+          Title
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToToastController()">
+          ToastController
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToSelect()">
-            Select
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToShowWhen()">
-            ShowWhen
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToToogle()">
+          Toogle
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToToolbar()">
+          Toolbar
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToSlide()">
-            Slide
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToSpinner()">
-            Spinner
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToTypography()">
+          Typography
+        </button>
+      </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToViewController()">
+          ViewController
+        </button>
+      </ion-col>
     </ion-row>
 
     <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToSplitPane()">
-            SplitPane
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToTab()">
-            Tab
-          </button>
-        </ion-col>
+      <ion-col col-6>
+        <button ion-button icon-left outline color="btnColor" (click)="goToVirualScroll()">
+          VirtualScroll
+        </button>
+      </ion-col>
     </ion-row>
 
-    <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToTabs()">
-            Tabs
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToThumbnail()">
-            Thumbnail
-          </button>
-        </ion-col>
-    </ion-row>
-
-    <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToTitle()">
-            Title
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToToastController()">
-            ToastController
-          </button>
-        </ion-col>
-    </ion-row>
-
-    <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToToogle()">
-            Toogle
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToToolbar()">
-            Toolbar
-          </button>
-        </ion-col>
-    </ion-row>
-
-    <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToTypography()">
-            Typography
-          </button>
-        </ion-col>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToViewController()">
-            ViewController
-          </button>
-        </ion-col>
-    </ion-row>
-
-    <ion-row>
-        <ion-col col-6>
-          <button ion-button icon-left outline color="btnColor" (click)="goToVirualScroll()">
-            VirtualScroll
-          </button>
-        </ion-col>
-    </ion-row>
-    
   </ion-grid>
 
 </ion-content>
