--- a/src/pages/komponenten/komponenten.html
+++ b/src/pages/komponenten/komponenten.html
@@ -242,7 +242,7 @@
     <ion-row>
       <ion-col col-6>
         <button ion-button icon-left outline color="btnColor" (click)="goToPlatformConfigToken()">
-          PlatformConfigToken
+          PlatformConfToken
         </button>
       </ion-col>
       <ion-col col-6>
