Personen select funkt

--- a/src/pages/termin-erstellung/termin-erstellung.html
+++ b/src/pages/termin-erstellung/termin-erstellung.html
@@ -29,7 +29,7 @@
             </ion-select>
           </ion-item>
           <ion-item>
-            <ion-datetime displayFormat="DD.MM.YYYY" formControlName="zeitpunkt" placeholder="Zeitpunkt auswählen" min="2017" max="2020"
+            <ion-datetime displayFormat="DD.MM.YYYY HH:mm" pickerFormat="DD.MM.YYYY HH:mm" formControlName="zeitpunkt" placeholder="Zeitpunkt auswählen" min="2012"
               cancelText="Abbrechen" doneText="Zeitpunkt übernehmen"></ion-datetime>
           </ion-item>
         </ion-list>
