--- a/src/pages/termin-bearbeitung/termin-bearbeitung.html
+++ b/src/pages/termin-bearbeitung/termin-bearbeitung.html
@@ -22,16 +22,15 @@
           </ion-item>
           <ion-item>
             <ion-label for="beiteiligtePersonen" floating>Beteiligte</ion-label>
-            <ion-select formControlName="beiteiligtePersonen" multiple="true">
+            <ion-select formControlName="beiteiligtePersonen" multiple="true" [compareWith]="compareSelectedPersonen">
               <ion-option *ngFor="let beteiligtePerson of personen" 
-                          [value]="beteiligtePerson.value" 
-                          [selected]="beteiligtePerson.selected">
+                          [value]="beteiligtePerson">
                 {{ beteiligtePerson.label }}
               </ion-option>
             </ion-select>
           </ion-item>
           <ion-item>
-            <ion-datetime displayFormat="DD.MM.YYYY" formControlName="zeitpunkt" placeholder="Zeitpunkt auswählen" min="2017" max="2020"
+            <ion-datetime displayFormat="DD.MM.YYYY HH:mm" formControlName="zeitpunkt" placeholder="Zeitpunkt auswählen" min="2012"
               cancelText="Abbrechen" doneText="Zeitpunkt übernehmen"></ion-datetime>
           </ion-item>
         </ion-list>
