--- a/src/pages/person/person.html
+++ b/src/pages/person/person.html
@@ -9,7 +9,6 @@
 
 </ion-header>
 
-
 <ion-content padding>
 
   <ion-fab top right edge>
@@ -18,19 +17,27 @@
     </button>
   </ion-fab>
 
-  <ion-list>
-    <ion-item *ngFor="let person of personen">
-      <ion-row>
-        <ion-col col-2>
-          <ion-icon name="person" item-start color="dark"></ion-icon>
-        </ion-col>
-        <ion-col col-10>
-          <h2>{{ person.vorname }} {{ person.nachname }}</h2>
-          <h3>{{ person.telefon }}</h3>
-          <p>{{ person.mail }}</p>
-        </ion-col>
-      </ion-row>
-    </ion-item>
+  <ion-list *ngFor="let person of personen">
+      <hr>
+      <ion-item-sliding #item (ionSwipe)="delete($event, person)">
+        <button class="hiddenButton" ion-item (click)="goToPersonBearbeitung(person)">
+          <ion-row>
+            <ion-col col-2>
+              <ion-icon name="person" item-start color="dark"></ion-icon>
+            </ion-col>
+            <ion-col col-10>
+              <h2>{{ person.vorname }} {{ person.nachname }}</h2>
+              <h3>{{ person.telefon }}</h3>
+              <p>{{ person.mail }}</p>
+            </ion-col>
+          </ion-row>
+        </button>
+        <ion-item-options side="right">
+          <button expandable (click)="delete(item, person)" large class="noBackground">
+              <ion-icon name="close" class="deleteIcon" item-start color="primary"></ion-icon>
+          </button>
+        </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 
 </ion-content>
